# misc

./: Cargo.toml  README.md
assets/graphviz/: Makefile
circuits/raspi_a4988_nema17_stepper_driver/: raspi_a4988_nema17_stepper_driver-cache.lib  raspi_a4988_nema17_stepper_driver.sch
de0-nano-soc/: README.md
experiment/opencv_rig/: Cargo.toml
experiment/opencv_rig/src/: main.rs
experiment/windows_memory/: Cargo.toml
experiment/windows_memory/src/: address_space.rs  error.rs  graphing.rs  main.rs  process.rs  scripting.rs  type.rs
experiment/windows_memory/src/scan/: signature.rs
experiments/rust_opencv_facedetect_harr/: Cargo.toml
experiments/svelte-app/: package-lock.json
experiments/svelte-app/src/: App.svelte  store.js
ideas/memproxy/: Cargo.toml
ideas/memproxy/src/: main.rs
ideas/opencv_rig/src/: main.rs
sandbox/amethyst/: Cargo.toml  README.md
sandbox/amethyst/config/: display.ron
sandbox/amethyst/src/: main.rs
sandbox/rendy_triangle/: Cargo.toml
sandbox/rendy_triangle/src/: main.rs
sandbox/vision/: README.md  detect_faces_harr.py  extract_embeddings.py  face_detector_shootout.py  pyproject.toml  slam.py
sandbox/vision/assets/models/: README.md
sandbox/vision/tests/: test_vision.py
sandbox/xcb_legion_glx/: Cargo.toml
sandbox/xcb_legion_glx/src/: main.rs
sandbox/xcb_legion_rendy/: Cargo.toml
src/: graphing.rs  main.rs  stats.rs
tools/screenshot/: Cargo.toml
trash/windows_memory/: .gitignore  README.md
visualization/graphviz/: Makefile  README.md  archwiki_example.dot
visualization/plantuml/: Makefile  README.md
(+2 files in other folders)
