[tool.poetry]
name = "vision"
version = "0.1.0"
description = ""
authors = ["malwrar <malwrar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
imutils = "^0.5.4"
opencv-contrib-python = "^4.5.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
